[package]
name = "proxy-cdnlibs"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
flate2 = "1.0"
http.workspace = true
prtl-proxy = { workspace = true, features = ["utils-json"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
